<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipes For Life</string>
    <string name="action_settings">Settings</string>
     <string name="action_fontup">Font Up</string>
      <string name="action_fontdown">Font Down</string>
    <string name="action_search">Search here...</string>
     <string name="action_share">Share</string>
     <string name="action_screenOn">Screen On</string>
      <string name="action_fullScreen">Full Screen</string>
      <string name="action_bookadd">Cookbook Add</string>
       <string name="action_copy">Copy</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open</string>
<string name="drawer_close">Close</string>
    

</resources>
