<menu xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    
     <item android:id="@+id/action_fontup"
          android:icon="@drawable/font_up"
          android:title="@string/action_fontup"
          yourapp:showAsAction="always"  />
     
      <item android:id="@+id/action_fontdown"
          android:icon="@drawable/font_down"
          android:title="@string/action_fontdown"
          yourapp:showAsAction="always"  />
     
     
     <item android:id="@+id/action_share"
          android:icon="@drawable/share"
          android:title="@string/action_share"
           yourapp:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider"
          yourapp:showAsAction="always"  />
     
     <item android:id="@+id/action_fullScreen"
          android:icon="@drawable/fullscreen"
          android:title="@string/action_fullScreen"
          yourapp:showAsAction="always"  />
     
     <item android:id="@+id/action_screenOn"
          android:icon="@drawable/screenon"
          android:title="@string/action_screenOn"
          yourapp:showAsAction="always"  />
     
	 <item android:id="@+id/action_search"
          android:icon="@drawable/search"
          android:title="@string/action_search"
          yourapp:showAsAction="always"  />
</menu>
