<menu xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:yourapp="http://schemas.android.com/apk/res-auto" >
    <!-- Search, should appear as action button -->
    
    <item android:id="@+id/action_copy"
          android:icon="@drawable/icon_copy"
          android:title="@string/action_copy"
          yourapp:showAsAction="ifRoom"  />
    
      <item android:id="@+id/action_bookadd"
          android:icon="@drawable/icon_plus1"
          android:title="@string/action_bookadd"
          yourapp:showAsAction="ifRoom"  />
      
       
      
      
    <item android:id="@+id/action_search"
          android:icon="@drawable/icon_search"
          android:title="@string/action_search"
          yourapp:showAsAction="ifRoom"
           yourapp:actionViewClass="android.support.v7.widget.SearchView"  />
    


</menu>
